reports/ct02_jupyter.log
Traceback (most recent call last):
  File "/root/anaconda3/envs/book/lib/python3.6/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/root/anaconda3/envs/book/lib/python3.6/site-packages/nbclient/client.py", line 1117, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/root/anaconda3/envs/book/lib/python3.6/site-packages/nbclient/util.py", line 78, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/root/anaconda3/envs/book/lib/python3.6/site-packages/nbclient/util.py", line 57, in just_run
    return loop.run_until_complete(coro)
  File "/root/anaconda3/envs/book/lib/python3.6/asyncio/base_events.py", line 488, in run_until_complete
    return future.result()
  File "/root/anaconda3/envs/book/lib/python3.6/site-packages/nbclient/client.py", line 559, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/root/anaconda3/envs/book/lib/python3.6/site-packages/nbclient/client.py", line 862, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/root/anaconda3/envs/book/lib/python3.6/site-packages/nbclient/client.py", line 765, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# jupyter
# 0. 概述
## 0.1 参考资料
[jupyter 官网](https://jupyter.org/index.html)
------------------

[0;36m  File [0;32m"<ipython-input-1-c4881271ed4a>"[0;36m, line [0;32m4[0m
[0;31m    [jupyter 官网](https://jupyter.org/index.html)[0m
[0m              ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-c4881271ed4a>, line 4)

